<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash"
    tools:context=".ui.daftar">
    <ImageView
        android:src="@drawable/logo2"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:contentDescription="@string/login2"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layout_login"
        android:background="@drawable/bg_daftar"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="500dp">
        <TextView
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/darkgrey"
            android:text="@string/daftar1"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/txt_nama"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/daftar2"
            android:autofillHints="@string/daftar2"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/txt_email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/daftar3"
            android:autofillHints="@string/daftar3"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/txt_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:hint="@string/daftar4"
            android:autofillHints="@string/daftar4"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/txt_phone"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkgrey"
            android:textColorHint="@color/darkgrey"
            android:hint="@string/daftar5"
            android:autofillHints="@string/daftar5"
            android:inputType="phone" />

        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:buttonTint="@color/darkgrey"
            android:id="@+id/checkBox"
            android:textSize="12sp"
            android:textColor="@color/darkgrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar6" />

        <ImageView
            android:id="@+id/tombol_daftar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/daftar8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tombol_daftar"/>

    </LinearLayout>
    <TextView
        android:id="@+id/txt_login"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/layout_login"
        android:text="@string/daftar7"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>