<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.akun_fragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/layoutForm"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="80dp"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/txt_email"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/akun1"
                    android:autofillHints="@string/akun1"/>
                <EditText
                    android:id="@+id/txt_nama"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/akun2"
                    android:autofillHints="@string/akun2"/>
                <EditText
                    android:id="@+id/txt_telepon"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/akun3"
                    android:autofillHints="@string/akun3"/>
                <EditText
                    android:id="@+id/txt_nomorktp"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/akun4"
                    android:autofillHints="@string/akun4"/>
                <EditText
                    android:id="@+id/txt_alamat"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/akun5"
                    android:autofillHints="@string/akun5"/>
                <EditText
                    android:id="@+id/txt_password"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/akun6"
                    android:autofillHints="@string/akun6"/>
                <Button
                    android:id="@+id/tblUbah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gradient1"
                    android:text="@string/akun7"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/tblLogout"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gradient1"
            android:text="@string/akun8"
            android:textColor="@color/white"/>
    </RelativeLayout>


</ScrollView>