<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Berhasil">


    <ImageView
        android:id="@+id/logoBerhasil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/berhasil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/booking22"/>
    <ImageView
        android:id="@+id/berhasil2"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/berhasil2"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logoBerhasil"
        android:contentDescription="@string/booking22"/>

    <androidx.cardview.widget.CardView
        android:layout_below="@id/berhasil2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginTop="20dp"
           android:layout_marginBottom="20dp"
           android:orientation="vertical">
           <TextView
               android:id="@+id/txtNamaPaket"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/booking23"
               android:layout_gravity="center_horizontal"
               android:textStyle="bold"
               android:textSize="18sp"/>
           <RelativeLayout
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <androidx.appcompat.widget.AppCompatTextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/booking24"
                   android:gravity="start"
                   android:textStyle="bold"
                   android:textSize="18sp"/>
               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/txtJumlahPeserta"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/booking25"
                   android:layout_alignParentEnd="true"
                   android:textSize="18sp"
                   tools:ignore="RelativeOverlap" />
           </RelativeLayout>
           <RelativeLayout
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <androidx.appcompat.widget.AppCompatTextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/booking26"
                   android:gravity="start"
                   android:textStyle="bold"
                   android:textSize="18sp"/>
               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/txtTanggal"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/booking27"
                   android:layout_alignParentEnd="true"
                   android:textSize="18sp"
                   tools:ignore="RelativeOverlap" />
           </RelativeLayout>
           <View
               android:layout_marginTop="30dp"
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:background="@color/pembayaran"/>
           <RelativeLayout
               android:layout_marginTop="5dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <androidx.appcompat.widget.AppCompatTextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/booking28"
                   android:gravity="start"
                   android:textStyle="bold"
                   android:textSize="18sp"/>
               <androidx.appcompat.widget.AppCompatTextView
                   android:id="@+id/txtTotalBayar"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/pembayaran"
                   android:textStyle="bold"
                   android:text="@string/booking29"
                   android:layout_alignParentEnd="true"
                   android:textSize="24sp"
                   tools:ignore="RelativeOverlap" />
           </RelativeLayout>
       </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/btnLanjutkan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/lanjutkan"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/booking30"/>
</RelativeLayout>