<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.opentrip">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbtoolbar"
        app:titleTextColor="@color/white"
        android:background="@color/gradient2"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <EditText
        android:id="@+id/mycalender"
        android:hint="@string/booking17"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:autofillHints="@string/booking17"
        android:inputType="date"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/booking16"/>

        <Spinner
            android:id="@+id/spinnerPaket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/idPaket"
        android:hint="@string/booking18"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:autofillHints="Tanggal Booking"
        android:inputType="date"
        android:visibility="invisible"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/booking19"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcHarga"
            android:layout_width="match_parent"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            />
    </androidx.cardview.widget.CardView>
    <EditText
        android:id="@+id/edJumlahPeserta"
        android:hint="@string/booking21"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:autofillHints="Tanggal Booking"
        android:inputType="date"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/btnCheckout"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:contentDescription="@string/booking20"
        android:layout_height="wrap_content"
        android:src="@drawable/checkout"/>

</LinearLayout>