<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/inbox"
            android:scaleType="fitXY"
            android:layout_margin="5dp"
            android:contentDescription="@string/pesan2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false">
        <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pesan3"
            android:gravity="end"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TextView
                android:id="@+id/txtJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/booking3"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesan4"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>